@@ -1,5 +1,9 @@
 2008-12-21  Ryan Lortie  <desrt@desrt.ca>
 
+	* src/trashapplet.c: use standard indentation style through-out
+
+2008-12-21  Ryan Lortie  <desrt@desrt.ca>
+
 	* src/trashapplet.c (trash_applet_monitor_changed): remove temporary
 	compatibility code
 
